crates/rstest-bdd/tests/fixtures_macros/step_macros_invalid_identifier.rs
//! Compile-fail step definition with an invalid identifier.
use rstest_bdd_macros::given;

#[given("invalid identifier")]
fn 1invalid() {}

fn main() {}
